--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
-<html lang="zh-TW">
+<html lang="zh-Hant">
 <head>
-  <meta charset="UTF-8">
-  <title>我的第一個 GitHub 網站</title>
+<meta charset="UTF-8">
+<title>Mobispace Tools</title>
+<link rel="stylesheet" href="assets/css/framework.css">
 </head>
 <body>
-  <h1>Hello GitHub Pages 🎉</h1>
-  <p>這是我用免費 GitHub 製作的網站</p>
+
+<h1>Mobispace Tools</h1>
+<ul>
+  <li><a href="tools/password.html">Password Generator</a></li>
+</ul>
+
+<script src="assets/js/framework.js"></script>
 </body>
 </html>
