--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 </head>
 <body>
 
-<h1>Mobispace Tools</h1>
+<h1>莫比空間｜工具</h1>
 <ul>
-  <li><a href="tools/password.html">Password Generator</a></li>
+  <li><a href="tools/password.html">密碼生成器</a></li>
 </ul>
 
 <script src="assets/js/framework.js"></script>
