--- a/tools/password.html
+++ b/tools/password.html
@@ -2,14 +2,44 @@
 <html lang="zh-Hant">
 <head>
 <meta charset="UTF-8">
-<title>Password Generator</title>
+<title>Secure Password Generator</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="../assets/css/framework.css">
 </head>
+
 <body>
 
-<h1>Password Generator</h1>
-<button id="generate">Generate</button>
-<div id="output"></div>
+<header class="app-header">
+  <h1>密碼產生器</h1>
+  <p class="sub"> Ⲙ𝔬ⲃ¡ⳝ𝔭ⲁ𝔠ⲉ·安全密碼生成器</p>
+</header>
+
+<main class="tool-layout">
+
+  <!-- 左側設定 -->
+  <section class="tool-panel">
+    <label>
+      密碼長度：
+      <strong><span id="lenVal">24</span></strong>
+    </label>
+    <input id="len" type="range" min="6" max="99" value="24">
+
+    <label class="checkbox">
+      <input type="checkbox" id="useSymbol" checked>
+      包含特殊符號
+    </label>
+
+    <button id="generate">產生密碼</button>
+  </section>
+
+  <!-- 右側結果 -->
+  <section class="tool-result">
+    <div id="output" class="output-box"></div>
+    <div id="strength" class="strength"></div>
+    <button id="copy">複製</button>
+  </section>
+
+</main>
 
 <script src="../assets/js/password.js"></script>
 </body>
