--- a/tools/password.html
+++ b/tools/password.html
@@ -1,46 +1,51 @@
 <!DOCTYPE html>
 <html lang="zh-Hant">
 <head>
-<meta charset="UTF-8">
-<title>Secure Password Generator</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="../assets/css/framework.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Secure Password Generator</title>
+
+  <!-- 共用樣式 -->
+  <link rel="stylesheet" href="../assets/css/framework.css">
 </head>
 
 <body>
 
-<header class="app-header">
-  <h1>密碼產生器</h1>
-  <p class="sub"> Ⲙ𝔬ⲃ¡ⳝ𝔭ⲁ𝔠ⲉ·安全密碼生成器</p>
-</header>
+<div id="mobispace-secure-tool">
 
-<main class="tool-layout">
+  <p class="ms-subtitle">
+    Secure Password Generator · Mobispace
+  </p>
 
-  <!-- 左側設定 -->
-  <section class="tool-panel">
+  <label>
+    密碼長度：
+    <strong><span id="ms_len_val">24</span></strong>
+  </label>
+  <input id="ms_len" type="range" min="6" max="99" value="24">
+
+  <div class="ms-option">
     <label>
-      密碼長度：
-      <strong><span id="lenVal">24</span></strong>
-    </label>
-    <input id="len" type="range" min="6" max="99" value="24">
-
-    <label class="checkbox">
-      <input type="checkbox" id="useSymbol" checked>
+      <input type="checkbox" id="ms_symbol" checked>
       包含特殊符號
     </label>
+  </div>
 
-    <button id="generate">產生密碼</button>
-  </section>
+  <button onclick="MS.generate()">產生安全密碼</button>
 
-  <!-- 右側結果 -->
-  <section class="tool-result">
-    <div id="output" class="output-box"></div>
-    <div id="strength" class="strength"></div>
-    <button id="copy">複製</button>
-  </section>
+  <div class="ms-output">
+    <div id="ms_out"></div>
+    <button onclick="MS.copy()">複製</button>
+  </div>
 
-</main>
+  <div id="ms_strength">⚠️</div>
 
+</div>
+
+<!-- 共用 JS（如果有） -->
+<script src="../assets/js/framework.js"></script>
+
+<!-- 密碼產生器 -->
 <script src="../assets/js/password.js"></script>
+
 </body>
 </html>
