--- a/tools/index.html
+++ b/tools/index.html
@@ -1,1 +1,145 @@
+<!DOCTYPE html>
+<html lang="zh-Hant">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Mobispace Tools</title>
+  <link rel="stylesheet" href="../assets/css/framework.css">
+  <style>
+    /* JyShare 風格簡易 CSS */
+    body {
+      font-family: "Segoe UI", Tahoma, Verdana, sans-serif;
+      margin: 0;
+      background: #f5f5f5;
+      color: #222;
+    }
+    header {
+      background: #1971c2;
+      color: #fff;
+      padding: 40px 20px 20px;
+      text-align: center;
+    }
+    header h1 {
+      margin: 0;
+      font-size: 2rem;
+    }
+    header p {
+      margin: 5px 0 0;
+      font-size: 1rem;
+      opacity: 0.9;
+    }
+    main {
+      max-width: 1100px;
+      margin: 40px auto;
+      padding: 0 20px;
+    }
+    .tool-category {
+      margin-bottom: 50px;
+    }
+    .tool-category h2 {
+      margin-bottom: 20px;
+      font-size: 1.5rem;
+      color: #1971c2;
+      border-left: 5px solid #1971c2;
+      padding-left: 10px;
+    }
+    .tool-list {
+      display: grid;
+      grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+      gap: 20px;
+    }
+    .tool-card {
+      background: #fff;
+      border-radius: 12px;
+      box-shadow: 0 6px 20px rgba(0,0,0,0.1);
+      padding: 20px;
+      transition: transform 0.2s, box-shadow 0.2s;
+    }
+    .tool-card:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 12px 28px rgba(0,0,0,0.15);
+    }
+    .tool-card h3 {
+      margin-top: 0;
+      margin-bottom: 10px;
+      font-size: 1.2rem;
+      color: #111;
+    }
+    .tool-card p {
+      margin: 0 0 15px;
+      color: #555;
+      font-size: 0.95rem;
+    }
+    .tool-card a {
+      text-decoration: none;
+      color: #fff;
+      background: #1971c2;
+      padding: 8px 12px;
+      border-radius: 6px;
+      font-weight: 600;
+      transition: background 0.2s;
+    }
+    .tool-card a:hover {
+      background: #145a96;
+    }
+    footer {
+      text-align: center;
+      padding: 30px 20px;
+      background: #f0f0f0;
+      color: #555;
+      font-size: 0.9rem;
+    }
+    footer a {
+      color: #1971c2;
+      text-decoration: none;
+    }
+  </style>
+</head>
+<body>
 
+<header>
+  <h1>Mobispace Tools</h1>
+  <p>Privacy-first, client-side web tools</p>
+</header>
+
+<main>
+
+  <section class="tool-category">
+    <h2>安全工具</h2>
+    <div class="tool-list">
+      <div class="tool-card">
+        <h3>Secure Password Generator</h3>
+        <p>Generate high-entropy passwords directly in your browser.</p>
+        <a href="password.html">使用工具 →</a>
+      </div>
+      <!-- 可以再新增更多安全工具卡片 -->
+    </div>
+  </section>
+
+  <section class="tool-category">
+    <h2>格式轉換</h2>
+    <div class="tool-list">
+      <div class="tool-card">
+        <h3>Base64 Encoder/Decoder</h3>
+        <p>Convert text or files to/from Base64 safely in-browser.</p>
+        <a href="base64.html">使用工具 →</a>
+      </div>
+      <div class="tool-card">
+        <h3>URL Encoder/Decoder</h3>
+        <p>Encode or decode URLs client-side with privacy-first design.</p>
+        <a href="url.html">使用工具 →</a>
+      </div>
+    </div>
+  </section>
+
+  <!-- 更多分類可按需求新增 -->
+  
+</main>
+
+<footer>
+  <p>© 2026 Mobispace · <a href="https://github.com/your-repo">GitHub</a></p>
+</footer>
+
+<script src="../assets/js/framework.js"></script>
+</body>
+</html>
