--- a/index.html
+++ b/index.html
@@ -1,17 +1,36 @@
 <!DOCTYPE html>
 <html lang="zh-Hant">
 <head>
-<meta charset="UTF-8">
-<title>Mobispace Tools</title>
-<link rel="stylesheet" href="assets/css/framework.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>莫比空間 總覽</title>
+  <link rel="stylesheet" href="assets/css/framework.css">
+  <style>
+    body { font-family: "Segoe UI", Tahoma, Verdana, sans-serif; background:#f5f5f5; color:#222; margin:0; }
+    header { text-align:center; padding:60px 20px; background:#1971c2; color:#fff; }
+    header h1 { margin:0; font-size:2.5rem; }
+    header p { margin:10px 0 0; font-size:1.2rem; opacity:0.9; }
+    main { max-width:900px; margin:40px auto; padding:0 20px; }
+    .overview-card { background:#fff; border-radius:12px; box-shadow:0 6px 20px rgba(0,0,0,0.1); padding:30px; text-align:center; margin-bottom:20px; transition: transform .2s; }
+    .overview-card:hover { transform: translateY(-5px); box-shadow:0 12px 28px rgba(0,0,0,.15); }
+    .overview-card a { text-decoration:none; color:#fff; background:#1971c2; padding:10px 18px; border-radius:8px; font-weight:600; display:inline-block; margin-top:15px; }
+    .overview-card a:hover { background:#145a96; }
+  </style>
 </head>
 <body>
 
-<h1>莫比空間｜工具</h1>
-<ul>
-  <li><a href="tools/password.html">密碼生成器</a></li>
-</ul>
+<header>
+  <h1>莫比空間 總覽</h1>
+  <p>Privacy-first, client-side web tools</p>
+</header>
 
-<script src="assets/js/framework.js"></script>
+<main>
+  <div class="overview-card">
+    <h2>工具列表</h2>
+    <p>瀏覽所有可用工具，點擊卡片進入使用。</p>
+    <a href="tools/">進入工具列表 →</a>
+  </div>
+</main>
+
 </body>
 </html>
